lesson4/css/small.css
#content {
    max-width: 960px;
    margin: 4% auto;
    padding: 0.5em;
}

body {
    background-color: #F6E8EA;
}

.green, h1, h2, h3, h4, h5, h6 {
    background-color: #005745;
    border-radius: 25px;
    padding-left: 10px;
    font-family: 'Quicksand', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    color: white;
}

p {
    color: white;
    font-family: 'Times New Roman', Times, serif;
}

header {
    display: grid;
    grid-template: 3rem 3rem/110px 100%;
    background-color: #F6E8EA;
}

header img {
    grid-area: 1/1/3/2;
    width: 100px;
}

header h1 {
    grid-area: 1/2/2/3;
    max-width: 50%;
    background-color: transparent;
    color: #005745;
}

header h2 {
    grid-area: 2/2/3/3;
    max-width: 50%;
    background-color: transparent;
    color: #005745;
}

nav {

}

ul {
    list-style-type: none;
}

nav ul li a {
    display: block;
    padding: 0.8rem 2%;
    text-decoration: none;
    color: white;
    border-top: 1px solid rgba(0,0,0,0.3);
}

nav button {
    margin: .2rem 2%;
    background-color: transparent;
    border: none;
    font-size: 1.6rem;
    color: #fff;
}

.active {
    background-color: rgba(255,255,255,0.2);
}

nav button:hover, nav ul li a:hover {
    background-color: rgba(0,0,0,0.3);
    color: white;
}

.contact {
    display: grid;
    grid-template: 1fr 1fr/1fr 1fr;
}

.c1 {
    grid-area: 1/1/3/2;
}

.c2 {
    grid-area: 1/2/2/3;
}

.c3 {
    grid-area: 2/2/3/3;

}

footer {

}

footer div {
    display: flex;   
    justify-content: space-around; 
}

.hide, .hide2 {
    display: none;
}

.square {
    display: none;
    border-bottom: solid 2px black;
    border-right: solid 2px black;
    border-left: solid 2px black;
}


.clearfix:after {
    content: "";
    display: table;
    clear: both;
}

img {
    color: white;
}

